.config/eww/css/powermenu.scss
.powermenu-box {
  background: $background-darker;
  border-radius: 1rem;
  color: $foreground;
}

.powermenu-button {
  border-radius: 1rem;
  transition: 0.3s;
}

.powermenu-button:hover {
  background: $selection;
}

.powermenu-entry {
  margin: 0.5rem;
}

.powermenu-button {
  padding: 0.5rem 1rem;
}

.powermenu-icon,
.powermenu-text {
  font-size: 1.5rem;
  margin: 0.5rem;
}

.powermenu-icon {
  &.Shutdown {
    color: $red;
  }

  &.Restart {
    color: $orange;
  }

  &.Lock {
    color: $yellow;
  }

  &.Hibernate,
  &.Sleep {
    color: $cyan;
  }

  &.Logoff {
    color: $green;
  }
}

